<resources>
    <string name="app_name">BasicArchitecture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="hint_address">Address</string>
    <string name="hint_surname">Surname</string>
    <string name="btn_next">Next</string>
    <string name="hint_birthday">Birthday</string>
    <string name="name_fragment_label">Name and Age</string>
    <string name="address_fragment_label">Address</string>
    <string name="tags_fragment_label">Tags</string>
    <string name="result_fragment_label">Result</string>
    <string name="data_picker_title">Select your Birthday</string>
    <string name="invalid_name">Некорректное имя</string>
    <string name="invalid_surname">Некорректная фамилия</string>
    <string name="invalid_age">Вы должны быть старше 18 лет</string>
    <string name="birthday_hint">dd/mm/yyyy</string>
    <string name="error_message">Ошибка при загрузке адреса из справочника</string>
</resources>