<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/name_fragment">
    <fragment
        android:id="@+id/name_fragment"
        android:name="ru.otus.basicarchitecture.view.NameFragment"
        android:label="@string/name_fragment_label"
        tools:layout="@layout/fragment_name">
        <action
            android:id="@+id/action_name_fragment_to_address_fragment"
            app:destination="@id/address_fragment" />
    </fragment>
    <fragment
        android:id="@+id/address_fragment"
        android:name="ru.otus.basicarchitecture.view.AddressFragment"
        android:label="@string/address_fragment_label"
        tools:layout="@layout/fragment_address">
        <action
            android:id="@+id/action_address_fragment_to_tags_fragment"
            app:destination="@id/tags_fragment" />
    </fragment>

    <fragment
        android:id="@+id/tags_fragment"
        android:name="ru.otus.basicarchitecture.view.TagsFragment"
        android:label="@string/tags_fragment_label"
        tools:layout="@layout/fragment_tags" />
</navigation>